some js dom concepts

--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Play with Dom</title>
+    <link rel="stylesheet" href="Styles/style.css">
 </head>
+
 <body>
-    
+    <h1 id="heading">Welcome to DoM</h1>
+    <div id="text-container">
+        <h3 class="text">D-Dom</h3>
+        <h3 class="text">O-Object</h3>
+        <h3 class="text">M-Model</h3>
+    </div>
+    <div>
+        <ul id="li-content">
+            <li> lorem 3...</li>
+            <li> lorem 3...</li>
+            <li> lorem 3...</li>
+            <li> lorem 3...</li>
+        </ul>
+    </div>
+
+    <script src="JS/apps.js"></script>
 </body>
+
 </html>
